# claude-code-architecture

./: .env.example  .gitignore  LICENSE  README.md  config.py  pyproject.toml
.mcp_servers/: example.tools.json
articles/: 01-core-agent-loop.md  02-knowledge-context.md  03-multi-agent-teams.md  04-production-hardening.md  05-async-performance.md  06-enterprise.md
docs/: PATTERN_MAP.md
examples/: run_code_review.py  run_feature_build.py  run_refactor.py
phase1_core_loop/: agent.py  subagent.py  todo_tools.py  tools.py
phase2_context_management/: compressor.py  skill_loader.py  task_graph.py
phase2_context_management/skills/: code_review.txt  documentation.txt  security_audit.txt
phase3_multi_agent/: background_tasks.py  fsm_protocol.py  mailbox.py  self_assignment.py  worktree.py
phase4_production/: event_bus.py  permissions.py  permissions.yaml  session_store.py  snapshots.py  streaming_agent.py
phase5_async_runtime/: async_agent.py  caching.py  interrupt.py  mcp_registry.py
phase6_enterprise/: combined_agent.py  redis_mailbox.py  worktree_lifecycle.py
tests/: test_compressor.py  test_config.py  test_fsm.py  test_mailbox.py  test_permissions.py  test_snapshots.py  test_task_graph.py  test_tools.py
